--- a/src/app/clef-notes/clef-notes.component.html
+++ b/src/app/clef-notes/clef-notes.component.html
@@ -1,10 +1,10 @@
-<div class="container">
+<div class="container m-2">
   <div class="row">
-    <div class="col centered">
+    <div class="col">
       <button (click)="shuffle()">Shuffle</button>
     </div>
     <div class="col font-weight-bold">
-      {{ answer }}
+      <h4>{{ answer }}</h4>
     </div>
   </div>
   <div class="row">
@@ -14,14 +14,16 @@
     <div class="col">
       <img [src]="notes[1]" (click)="check(1)" />
     </div>
-    <div class="col">
-      <img [src]="notes[2]" (click)="check(2)" />
-    </div>
   </div>
   <div class="row">
     <div class="col">
+      <img [src]="notes[2]" (click)="check(2)" />
+    </div>
+    <div class="col">
       <img [src]="notes[3]" (click)="check(3)" />
     </div>
+  </div>
+  <div class="row">
     <div class="col">
       <img [src]="notes[4]" (click)="check(4)" />
     </div>
